# hic

./: licence.txt  readme.txt
config/: lofarConfig.xml.example
doc/development/: HICdesignUML.zargo  HICdesignUML.zargo~
doc/development/bouml/bouml/: 100.session  bouml.prj
doc/development/bouml/hic/: 128228_100.b  128356_100.b  128484_100.b  128612_100.b  128740_100.b  128996_100.b  129124_100.b  129380_100.b  129636_100.b  129764_100.b  130020_100.b  130404_100.b  131684_100.b  132196_100.b  132324_100.b  132580_100.b  132836_100.b  132964_100.b  133092_100.b  133348_100.b  133604_100.b  133732_100.b  133860_100.b  133988_100.b  134116_100.b  134244_100.b  134500_100.b  134628_100.b  134756_100.b  134884_100.b  135140_100.b  135268_100.b  135396_100.b  135524_100.b  135780_100.b  135908_100.b  136036_100.b  136420_100.b  136548_100.b  136804_100.b  (+21 more)
src/: CMakeLists.txt  modules.cmake
src/generator/: AbstractGenerator.h  CMakeLists.txt  StateController.h
src/generator/src/: AbstractGenerator.cpp  StateController.cpp
src/generator/test/: CMakeLists.txt  StateControllerTest.h  TestGenerator.h
src/generator/test/src/: StateControllerTest.cpp  TestGenerator.cpp
src/hardware/: .#CMakeLists.txt.1.1  .#State.h.1.3  AbstractHardware.h  CMakeLists.txt  Config.h  MultiRangeParameter.h  MultiRangeParameterInterface.h  Parameter.h  ParameterGroup.h  ParameterQObject.h  Range.h  RangeParameter.h  ResourceSpec.h  SelectionParameter.h  SelectionParameterInterface.h  SharedResource.h  SingleParameter.h  SingleParameterInterface.h  State.h  StateParameter.h  StringConversion.h  ValueParameter.h
src/hardware/src/: .#State.cpp.1.2  AbstractHardware.cpp  Config.cpp  MultiRangeParameter.cpp  MultiRangeParameterInterface.cpp  Parameter.cpp  ParameterGroup.cpp  ParameterQObject.cpp  Range.cpp  RangeParameter.cpp  ResourceSpec.cpp  SelectionParameter.cpp  SelectionParameterInterface.cpp  SharedResource.cpp  SingleParameter.cpp  SingleParameterInterface.cpp  State.cpp  StateParameter.cpp  StringConversion.cpp  ValueParameter.cpp
src/hardware/test/: CMakeLists.txt  MultiRangeParameterTest.h  RangeTest.h  TestState.h
src/hardware/test/src/: MultiRangeParameterTest.cpp  RangeTest.cpp  TestState.cpp
src/interfaces/: CMakeLists.txt  MainInterface.h  MainWidget.h  ParamWidgetMultiRange.h  ParamWidgetSelection.h  ParamWidgetSingleValue.h  ParameterWidget.h  ReportModel.h  ReportViewer.h  StateWidget.h  gui_main.cpp
src/interfaces/src/: MainInterface.cpp  MainWidget.cpp  ParamWidgetMultiRange.cpp  ParamWidgetSelection.cpp  ParamWidgetSingleValue.cpp  ParameterWidget.cpp  ReportModel.cpp  ReportViewer.cpp  StateWidget.cpp
src/interfaces/test/: CMakeLists.txt
src/interfaces/test/src/: interfacesTest.cpp
src/lofar/: .#LofarBeams.h.1.4  BeamDirection.h  CMakeLists.txt  LCU_Generator.h  LCU_Platform.h  Lofar.h  LofarBeam.h  LofarBeams.h  LofarHardwareView.h  RCU.h  RCU_Filter.h  XML_Generator.h
src/lofar/src/: .#LCU_Generator.cpp.1.7  .#LofarBeam.cpp.1.16  .#LofarBeams.cpp.1.4  .#XML_Generator.cpp.1.3  BeamDirection.cpp  LCU_Generator.cpp  LCU_Platform.cpp  Lofar.cpp  LofarBeam.cpp  LofarBeams.cpp  LofarHardwareView.cpp  RCU.cpp  RCU_Filter.cpp  XML_Generator.cpp
src/lofar/test/: CMakeLists.txt  LCU_GeneratorTest.h  LofarBeamTest.h  LofarTest.h
src/lofar/test/src/: LCU_GeneratorTest.cpp  LofarBeamTest.cpp  LofarTest.cpp
src/system/: .#Platform.h.1.4  AbstractAgent.h  AbstractExecAgent.h  AbstractFileTransfer.h  CMakeLists.txt  Command.h  CommandReport.h  CommandsItem.h  CommandsItemImpl.h  FileItem.h  FileItemImpl.h  LocalHost.h  LocalHostExecAgent.h  LocalHostFileTransfer.h  Platform.h  Procedure.h  ProcedureItem.h  ProcedureItemImpl.h  RemoteFile.h  Report.h  SSH_ExecAgent.h  SSH_FileTransfer.h
src/system/src/: .#LocalHost.cpp.1.3  .#Platform.cpp.1.5  AbstractAgent.cpp  AbstractExecAgent.cpp  AbstractFileTransfer.cpp  Command.cpp  CommandReport.cpp  CommandsItem.cpp  CommandsItemImpl.cpp  FileItem.cpp  FileItemImpl.cpp  LocalHost.cpp  LocalHostExecAgent.cpp  LocalHostFileTransfer.cpp  Platform.cpp  Procedure.cpp  ProcedureItem.cpp  ProcedureItemImpl.cpp  RemoteFile.cpp  Report.cpp  SSH_ExecAgent.cpp  SSH_FileTransfer.cpp
src/system/test/: CMakeLists.txt  CommandsItemTest.h  PlatformTest.h  ProcedureTest.h  RemoteFileTest.h  TestProcedureItem.h  TestProcedureItemImpl.h
src/system/test/src/: CommandsItemTest.cpp  PlatformTest.cpp  ProcedureTest.cpp  RemoteFileTest.cpp  TestProcedureItem.cpp  TestProcedureItemImpl.cpp
tools/: class  newpackage
